--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
-/* Personal Reset */
+/**
+* RESET 
+* ------------------------------------
+*/
 *, *::before, *::after {
    box-sizing: border-box;
 }
@@ -29,6 +32,11 @@ h1 {
    display: flex;
    justify-content: center;
    border-bottom: 1px solid #191919;
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   z-index: 1;
 }
 .header .container {
    padding: 25px 0;
@@ -59,11 +67,9 @@ h1 {
 }
 
 /**
- * MAIN 
- * ------------------------------------
- */
-
- /* HERO SECTION */
+* HERO SECTION 
+* ------------------------------------
+*/
 .hero {
    background-color: #ffc017;
    display: flex;
@@ -72,7 +78,7 @@ h1 {
    position: relative;
 }
 .hero .container {
-   padding: 90px 0;
+   padding: 180px 0 90px 0;
    display: flex;
    align-items: center;
 }
@@ -92,11 +98,14 @@ h1 {
 }
 .animation-emme {
    position: absolute;
-   top: 0;
+   bottom: 0;
    right: 0;
 }
 
-/* TRENDING SECTION */
+/**
+* TRENDING SECTION 
+* ------------------------------------
+*/
 .trending {
    display: flex;
    justify-content: center;
@@ -146,14 +155,124 @@ h1 {
    margin-bottom: 0.5rem;
 }
 
-
 /**
- * MAIN 
- * ------------------------------------
- */
-
-/**
-* MAIN 
+* ARTICLE SECTION 
 * ------------------------------------
 */
+.article-aside {
+   display: flex;
+   justify-content: center;
+}
+.article-aside .container {
+   padding: 3.5rem 0;
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-start;
+}
+.articles {
+   width: 59%;
+}
+.article {
+   display: flex;
+   color: #757575;
+   margin-bottom: 3rem;
+}
+.article span {
+   font-size: 0.8rem;
+}
+.article a,
+.article img {
+   display: block;
+}
+.article-header {
+   display: flex;
+   align-items: center;
+   margin-bottom: 0.5rem;
+   font-weight: 500;
+   color: #191919;
+}
+.article-header img {
+   width: 20px;
+   margin-right: 0.5rem;
+   border-radius: 5px;
+}
+.article-text {
+   position: relative;
+   margin-right: 1.2rem;
+}
+.article-title h2 {
+   font-size: 1.4rem;
+   font-weight: 700;
+   margin-bottom: 0.25rem;
+}
+.article-title h3 {
+   line-height: 1.2;
+}
+.article-title h3 a {
+   color: #757575;
+   margin-bottom: 0.5rem;
+}
+.article-title .title-footer {
+   display: flex;
+   align-items: center;
+}
+.article-title .title-footer span,
+.article-title .title-footer a {
+   margin-right: 0.2rem;
+}
+.btn-article {
+   display: inline-block;
+   background-color: #F2F2F2;
+   color: #757575;
+   font-size: 0.8rem;
+   padding: 0.25rem 0.5rem;
+   border-radius: 100px;
+}
+.article-img img {
+   width: 200px;
+}
+.bookmark {
+   position: absolute;
+   bottom: 0;
+   right: 0;
+}
 
+/**
+* ASIDE SECTION 
+* ------------------------------------
+*/
+.sidebar {
+   width: 33%;
+   position: sticky;
+   top: 115px;
+}
+.sidebar-content {
+   padding-bottom: 1.5rem;
+   border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.sidebar h2 {
+   margin-bottom: 1rem;
+}
+.sidebar-category a {
+   display: inline-block;
+   font-size: 0.8rem;
+   color: #757575;
+   padding: 0.5rem 1rem;
+   border: 1px solid rgba(0,0,0,.1);
+   margin: 0 0.5rem 0.5rem 0;
+}
+.sidebar-menu {
+   list-style-type: none;
+   display: flex;
+   flex-wrap: wrap;
+   column-gap: 1rem;
+   row-gap: 0.5rem;
+   padding: 1.5rem 0;
+}
+.sidebar-menu a {
+   color: #757575;
+}
+/**
+ *  
+ * ------------------------------------
+ */
