add change on scroll & animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ h1 {
    left: 0;
    right: 0;
    z-index: 1;
+   transition: all 0.5s linear;
 }
 .header .container {
    padding: 25px 0;
@@ -64,6 +65,14 @@ h1 {
    border: none;
    padding: 0.8rem 1rem;
    border-radius: 20px;
+   transition: all 0.5s linear;
+}
+/* Change on Scroll */
+.scroll-down .header {
+   background-color: #fff;
+}
+.scroll-down .header .btn{
+   background-color: #1a8917;
 }
 
 /**
@@ -227,6 +236,10 @@ h1 {
    font-size: 0.8rem;
    padding: 0.25rem 0.5rem;
    border-radius: 100px;
+   transition: all 0.5s linear;
+}
+.btn-article:hover {
+   background-color: #d6d6d6;
 }
 .article-img img {
    width: 200px;
