--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ body {
 h1 {
    font-family: 'Spectral', serif;
 }
+.overflow{
+   overflow: hidden;
+}
 .container {
    max-width: 1200px;
    width: 100%;
@@ -46,7 +49,7 @@ h1 {
    align-items: center;
 }
 .header .menu a {
-   display: inline-block;
+   display: block;
    font-size: 0.9rem;
 }
 .header .menu {
@@ -54,9 +57,6 @@ h1 {
    display: flex;
    align-items: center;
    column-gap: 25px;
-}
-.header .menu a{
-   display: block;
 }
 .btn {
    display: inline-block;
@@ -103,6 +103,7 @@ h1 {
    margin-bottom: 3rem;
 }
 .hero .btn {
+   font-size: 1.3rem;
    padding: 0.8rem 3rem;
 }
 .animation-emme {
@@ -110,6 +111,23 @@ h1 {
    bottom: 0;
    right: 0;
 }
+@media screen and (max-width: 1024px) {
+   .animation-emme {
+      right: -100px;
+   }
+}
+@media screen and (max-width: 768px) {
+   .hero h1 {
+      font-size: 5.3rem;
+   }
+   .hero h2 {
+      width: 60%;
+   }
+   .animation-emme {
+      right: -185px;
+   }
+}
+
 
 /**
 * TRENDING SECTION 
@@ -138,6 +156,11 @@ h1 {
    width: 31%;
    display: flex;
 }
+@media screen and (max-width: 1024px){
+   .trending-card {
+      width: 48%;
+   }
+}
 .trending-number {
    margin-right: 1rem;
 }
@@ -160,6 +183,7 @@ h1 {
    margin-right: 0.5rem;
 }
 .trending-text h2 {
+   line-height: 1.3;
    font-weight: 700;
    margin-bottom: 0.5rem;
 }
@@ -249,6 +273,22 @@ h1 {
    bottom: 0;
    right: 0;
 }
+@media screen and (max-width: 1024px) {
+   .article-aside .container {
+      flex-direction: column-reverse;
+      padding: unset;
+   }
+   .articles {
+      width: 100%;
+   }
+}
+@media screen and (max-width: 768px) {
+   .articles {
+      padding: 3rem;
+   }
+}
+
+
 
 /**
 * ASIDE SECTION 
@@ -285,6 +325,24 @@ h1 {
 .sidebar-menu a {
    color: #757575;
 }
+@media screen and (max-width: 1024px) {
+   .sidebar {
+      width: 100%;
+      position: unset;
+   }
+   .sidebar-content {
+      padding-top: 1.5rem;
+   }
+   .sidebar-menu {
+      column-gap: 3rem;
+   }
+}
+@media screen and (max-width: 768px) {
+   .sidebar-menu {
+      display: none;
+   }
+}
+
 /**
  *  
  * ------------------------------------
