--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,13 @@ h1 {
    width: 100%;
    margin-inline: 50px;
 }
+@media screen and (max-width: 768px) {
+   .container {
+      margin-inline: 20px;
+   }
+
+}
+
 
 /**
  * HEADER 
@@ -67,6 +74,19 @@ h1 {
    border-radius: 20px;
    transition: all 0.5s linear;
 }
+@media screen and (max-width: 768px) {
+   .header .menu li:nth-of-type(1),
+   .header .menu li:nth-of-type(2),
+   .header .menu li:nth-of-type(3) {
+      display: none;
+   }
+}
+@media screen and (max-width: 551px) {
+   .header .menu li:nth-of-type(4) {
+      display: none;
+   }
+}
+
 /* Change on Scroll */
 .scroll-down .header {
    background-color: #fff;
@@ -113,7 +133,7 @@ h1 {
 }
 @media screen and (max-width: 1024px) {
    .animation-emme {
-      right: -100px;
+      right: -200px;
    }
 }
 @media screen and (max-width: 768px) {
@@ -124,7 +144,12 @@ h1 {
       width: 60%;
    }
    .animation-emme {
-      right: -185px;
+      display: none;
+   }
+}
+@media screen and (max-width: 551px) {
+   .hero h1 {
+      font-size: 4.4rem;
    }
 }
 
@@ -156,11 +181,6 @@ h1 {
    width: 31%;
    display: flex;
 }
-@media screen and (max-width: 1024px){
-   .trending-card {
-      width: 48%;
-   }
-}
 .trending-number {
    margin-right: 1rem;
 }
@@ -187,6 +207,17 @@ h1 {
    font-weight: 700;
    margin-bottom: 0.5rem;
 }
+@media screen and (max-width: 1024px){
+   .trending-card {
+      width: 48%;
+   }
+}
+@media screen and (max-width: 768px){
+   .trending-card {
+      width: 100%;
+   }
+}
+
 
 /**
 * ARTICLE SECTION 
@@ -284,7 +315,7 @@ h1 {
 }
 @media screen and (max-width: 768px) {
    .articles {
-      padding: 3rem;
+      padding: 3rem 0;
    }
 }
 
