--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ h1 {
    justify-content: center;
    border-bottom: 1px solid #191919;
    position: relative;
+   overflow: hidden;
 }
 .hero .container {
    padding: 180px 0 90px 0;
